# yozoon_token_ecosystem

./: .gitignore  Anchor.toml  Cargo.toml  Dockerfile  README.md  build-and-test.sh  docker-compose.yml  package.json  test-wallet.json
.cargo/: config.toml
app/docs/: api-guide.md
app/idl/: types.ts  yozoon.ts
app/utils/: yozoon-client.ts
docs/: API.md  api-documentation.md  api-reference.md  frontend-integration.md
idl/: yozoon.ts
programs/yozoon/: Cargo.toml  Cargo.toml.minimal
programs/yozoon/src/: errors.rs  lib.rs  lib.rs.bak  lib.rs.minimal
programs/yozoon/src/errors/: mod.rs
programs/yozoon/src/events/: mod.rs
programs/yozoon/src/instructions/: admin.rs  airdrop.rs  bonding_curve.rs  contexts.rs  migration.rs  mod.rs  referral.rs
programs/yozoon/src/raydium/: mod.rs
programs/yozoon/src/state/: mod.rs
programs/yozoon/src/utils/: constants.rs  helpers.rs  mod.rs  price.rs
scripts/: cli.js  test.sh
tests/: frontend.ts  full_migration_test.js  raydium_migration.ts  simple_test.js  yozoon.ts
