[workspace]
members = ["programs/*"]
resolver = "2"

# Set the Solana BPF version to use
[workspace.dependencies]
solana-program = "=1.18.26"
solana-sdk = "=1.18.26"
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
pyth-sdk-solana = "0.10.0"
spl-token = "4.0.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[profile.test]
overflow-checks = true

[profile.test.build-override]
opt-level = 3
incremental = false
codegen-units = 1
