[package]
name = "yozoon"
version = "0.1.0"
description = "Yozoon token ecosystem"
edition = "2021"

[package.metadata]
rustflags = ["-A", "unexpected_cfgs"]

[lib]
crate-type = ["cdylib", "lib"]
name = "yozoon"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
solana-program = "=1.18.26"
# Local dependencies for pyth oracle compatibility
pyth-sdk-solana = "0.10.0"
spl-token = "4.0.0"
# Handle getrandom in BPF target
getrandom = { version = "0.2.10", features = ["custom"] }

[dev-dependencies]
solana-sdk = "=1.18.26"
