[package]
name = "yozoon"
version = "0.1.0"
description = "Yozoon token ecosystem"
edition = "2021"

[package.metadata]
rustflags = ["-A", "unexpected_cfgs"]

[lib]
crate-type = ["cdylib", "lib"]
name = "yozoon"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.26.0", features = ["init-if-needed"] }
anchor-spl = "0.26.0"
solana-program = "=1.16.27"
# Local dependencies for pyth oracle compatibility
pyth-sdk-solana = "0.8.0"
spl-token = "3.5.0"
# Handle getrandom in BPF target
getrandom = { version = "0.2.10", features = ["custom"] }
proc-macro2 = "1.0.56"

[dev-dependencies]
solana-sdk = "=1.16.27"
